--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -266,7 +266,7 @@ main {
 } */
 .slider .slider-img {
   width: 100%;
-  height: 100%;
+  height: 60vh;
   background: no-repeat;
   object-fit: cover;
   border-radius: 4px;
