--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -267,9 +267,15 @@ main {
 .slider .slider-img {
   width: 100%;
   height: 60vh;
+  object-fit: conver;
   background: no-repeat;
-  object-fit: cover;
   border-radius: 4px;
+}
+
+@media screen and (max-width: 1200px) {
+  .slider .slider-img {
+    height: 30vh;
+  }
 }
 
 /* ---------------footer----------------- */
